Added dynamically generated charts (using firebase) and game posts (using firebase real time database too)

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,17 @@
 .firebaserc
-firebase.json
 firebase-debug.log
-.firebaserc
+firebase.json
 classics-franchise-web-export.json
+database.rules.json
+css/materialize.min.css
+js/materialize.min.js
+fonts/roboto/Roboto-Regular.woff2
+fonts/roboto/Roboto-Bold.woff
+fonts/roboto/Roboto-Bold.woff2
+fonts/roboto/Roboto-Light.woff
+fonts/roboto/Roboto-Light.woff2
+fonts/roboto/Roboto-Medium.woff
+fonts/roboto/Roboto-Medium.woff2
+fonts/roboto/Roboto-Regular.woff
+fonts/roboto/Roboto-Thin.woff
+fonts/roboto/Roboto-Thin.woff2
